Bug 1705080, make MediaStreams behave as normal EventTargets, r=jib

Differential Revision: https://phabricator.services.mozilla.com/D115269